--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -22,5 +22,5 @@ jobs:
                   git config user.name github-actions
                   git config user.email github-actions@github.com
                   git add .
-                  git commit -m "ci: update dataset"
+                  git commit -m "ci: update dataset" || echo "Nothing to push"
                   git push
